--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -12,10 +12,11 @@
               <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--text" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner">
 
-                    <div class="pmx-selector pmx-selector--semsearch-tag">
+                    <div class="pmx-selector">
                       <div class="pmx-selector__value">
                         <div class="pmx-selector__label ">
-                          <span class="pmx-selector--semsearch-tag__type">Any •</span> Typed keyword
+                          <span class="pmx-selector__type">Any •</span>
+                          <span class="pmx-selector__field">Typed keyword</span>
                         </div>
                       </div>
                     </div>
@@ -27,10 +28,11 @@
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--text" style="flex-grow: 1;">
                     <div class="itemBoxTable__bodyCellInner">
 
-                      <div class="pmx-selector pmx-selector--semsearch-tag">
+                      <div class="pmx-selector">
                         <div class="pmx-selector__value">
                           <div class="pmx-selector__label ">
-                            <span class="pmx-selector--semsearch-tag__type">Title •</span> Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                            <span class="pmx-selector__type">Title •</span>
+                            <span class="pmx-selector__field">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
                           </div>
                         </div>
                       </div>
@@ -42,10 +44,11 @@
                 <li class="itemBoxTable__bodyCell  itemBoxTable__bodyCell--text" style="flex-grow: 1;">
                     <div class="itemBoxTable__bodyCellInner">
 
-                      <div class="pmx-selector pmx-selector--semsearch-tag">
+                      <div class="pmx-selector">
                         <div class="pmx-selector__value">
                           <div class="pmx-selector__label ">
-                            <span class="pmx-selector--semsearch-tag__type">Assigned to •</span> Nick De Jaeger
+                            <span class="pmx-selector__type">Assigned to •</span>
+                            <span class="pmx-selector__field">Nick De Jaeger</span>
                           </div>
                         </div>
                       </div>
@@ -57,10 +60,11 @@
                 <li class="itemBoxTable__bodyCell  itemBoxTable__bodyCell--text" style="flex-grow: 1;">
                     <div class="itemBoxTable__bodyCellInner">
 
-                      <div class="pmx-selector pmx-selector--semsearch-tag">
+                      <div class="pmx-selector">
                         <div class="pmx-selector__value">
                           <div class="pmx-selector__label ">
-                            <span class="pmx-selector--semsearch-tag__type">Priority •</span> dialog-wrapper
+                            <span class="pmx-selector__type">Priority •</span>
+                            <span class="pmx-selector__field">dialog-wrapper</span>
                           </div>
                         </div>
                       </div>
