--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -351,7 +351,7 @@
 
       // normal --add will be goldenrod, as the actions
       // excluded --add will be red
-      .exclude &--add {
+      .js_exclude &--add {
         color: red;
       }
       // --remove will be barely visible gray
