prefixing js classes 3

--- a/_includes/blocks/old-pmx-table.html
+++ b/_includes/blocks/old-pmx-table.html
@@ -32,7 +32,7 @@
                               <span id="anonymous_element_127">
                                 <div id="picker" class="solidinput haspicker" title="" style="width: 95%;">
                                   <div class="newpicker bottom" id="anonymous_element_128">
-                                    <span class="newpickerbutton showFunnel new-multiselect-trigger">&nbsp;</span>
+                                    <span class="newpickerbutton showFunnel js_new-multiselect-trigger">&nbsp;</span>
                                   </div>
                                   <div class="pickerinput">
                                     <span class="noinput invisible pickerfocusable" tabindex="0">&nbsp;</span>
@@ -45,7 +45,7 @@
                               <span id="anonymous_element_138">
                                 <div id="picker" class="solidinput haspicker" style="height: auto; width: 95%; font-size:14px;" title="Arnaud S&amp;#39;Jongers, Esteban Sastre, Jonathan Langens">
                                   <div class="newpicker bottom open" id="anonymous_element_139">
-                                    <span class="newpickerbutton old-pmx-multiselect-trigger">&nbsp;</span>
+                                    <span class="newpickerbutton js_old-pmx-multiselect-trigger">&nbsp;</span>
                                     {% include popups/old-pmx-multiselect.html %}
 
                                   </div>
