--- a/_includes/popups/old-pmx-multiselect.html
+++ b/_includes/popups/old-pmx-multiselect.html
@@ -3,7 +3,7 @@
     <div class="newpickercontent">
       <div id="tabs" class="old-multiselect-tabs">
 
-        <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--required js_pmx-selector--incl-excl pmx-selector--old">
+        <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--required js_pmx-selector--incl-excl js_pmx-selector--old">
           <div class="pmx-selector__value js_pmx-selector__value--include pmx-selector__value--selected">
             <div class="pmx-selector__label ">
               <span class="" style="">Include</span>
