--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -15,8 +15,8 @@
                     <div class="pmx-selector">
                       <div class="pmx-selector__value">
                         <div class="pmx-selector__label ">
-                          <span class="pmx-selector__type">Any •</span>
-                          <span class="pmx-selector__field">Typed keyword</span>
+                          <span class="pmx-selector__labelType">Any •</span>
+                          <span class="pmx-selector__labelField">Typed keyword</span>
                         </div>
                       </div>
                     </div>
@@ -31,8 +31,8 @@
                       <div class="pmx-selector">
                         <div class="pmx-selector__value">
                           <div class="pmx-selector__label ">
-                            <span class="pmx-selector__type">Title •</span>
-                            <span class="pmx-selector__field">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
+                            <span class="pmx-selector__labelType">Title •</span>
+                            <span class="pmx-selector__labelField">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
                           </div>
                         </div>
                       </div>
@@ -47,8 +47,8 @@
                       <div class="pmx-selector">
                         <div class="pmx-selector__value">
                           <div class="pmx-selector__label ">
-                            <span class="pmx-selector__type">Assigned to •</span>
-                            <span class="pmx-selector__field">Nick De Jaeger</span>
+                            <span class="pmx-selector__labelType">Assigned to •</span>
+                            <span class="pmx-selector__labelField">Nick De Jaeger</span>
                           </div>
                         </div>
                       </div>
@@ -63,8 +63,8 @@
                       <div class="pmx-selector">
                         <div class="pmx-selector__value">
                           <div class="pmx-selector__label ">
-                            <span class="pmx-selector__type">Priority •</span>
-                            <span class="pmx-selector__field">dialog-wrapper</span>
+                            <span class="pmx-selector__labelType">Priority •</span>
+                            <span class="pmx-selector__labelField">dialog-wrapper</span>
                           </div>
                         </div>
                       </div>
