--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -139,6 +139,10 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 
+    > span {
+      display: inline-block;
+    }
+
     &Icon {
       color: #808080;
       transition: all .3s ease-in-out;
