added color-picker page with popup

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -26,6 +26,7 @@ body {
 }
 body.page-Components,
 body.page-Itembox,
+body.page-Colorpicker,
 body.page-Popups {
   background-color: #FFF;
   padding: 50px;
