added color circles for colorpicker popup

--- a/_includes/popups/colorPickerPopup.html
+++ b/_includes/popups/colorPickerPopup.html
@@ -38,7 +38,14 @@
               <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text"><span class="outer"><span class="inner">My First tag</span></span></div>
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                      <span class="outer">
+                        <span class="inner">
+                      <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                      My First tag
+                    </span>
+                      </span>
+                    </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
@@ -97,7 +104,10 @@
               <div class="itemBoxBody">
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">My First tag</div>
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                      <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                      My First tag
+                    </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
@@ -107,7 +117,10 @@
                 </ul>
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Milestone 20</div>
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                      <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                      Milestone 20
+                    </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
@@ -117,7 +130,10 @@
                 </ul>
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Prior Asap</div>
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                      <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                      Prior Asap
+                    </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
@@ -127,7 +143,10 @@
                 </ul>
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Example tag</div>
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                      <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                      Example tag
+                    </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
