--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -13,12 +13,12 @@
 
 
 // Plugins
-@import "plugin/tabs.css";
 @import "plugin/sticky.css";
 
 
 // Components
 @import "components/breadcrumbs.css";
+@import "components/tabs.css";
 
 @import "components/itemBox.css";
 
