don't add classes in old pmx structures

--- a/_includes/blocks/old-pmx-table.html
+++ b/_includes/blocks/old-pmx-table.html
@@ -20,7 +20,7 @@
                     </ul>
                   </li>
 
-                  <li class="filter old-pmx-filter">
+                  <li class="filter">
                     <div class="inlinefilter">
                       <table class="filtermode">
                         <tbody>
