--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,9 +1,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-<!-- ALL FOR TABS -->
+<!-- CDN FOR TABS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/tabs.js"></script>
+
 <!-- END -->
 
 <!-- ALL FOR STICKY -->
@@ -22,6 +22,7 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
 
 <!-- COMPONENTS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
