added temporary scss file

--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -7,7 +7,6 @@
 @import "keyframes.css";
 @import "app.css";
 
-
 // Blocks
 @import "blocks/appHeader.css";
 
@@ -20,3 +19,7 @@
 @import "components/selector.css";
 @import "components/multiSelector.css";
 @import "components/colorselector.css";
+
+
+// temporary, because of js
+@import "temporary.css";
